# reactive-graphs

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  package.yaml  reactive-graphs.cabal  stack.yaml
src/main/eta/: ReactiveGraphs.hs
test/: Spec.hs
